[tool.poetry]
name = "xpipe_client"
version = "0.1.0"
description = "Client for the XPipe API"
authors = ["Clint Olson <coandco@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
