[tool.poetry]
name = "xpipe_client"
version = "0.1.3"
description = "Client for the XPipe API"
authors = ["Clint Olson <coandco@gmail.com>"]
repository = "https://github.com/coandco/python_xpipe_client"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
