[tool.poetry]
name = "xpipe_client"
version = "0.1.16"
description = "Client for the XPipe API"
authors = ["Clint Olson <coandco@gmail.com>"]
repository = "https://github.com/coandco/python_xpipe_client"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
aiohttp-requests = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
